# mnist-ml-digit-recognizer

./: LICENSE  README.md
backend/: .gitignore  README.md  image_processor.py  main.py  model_loader.py  pyproject.toml  setup.sh  test_setup.py  train_model.py
backend/models/: mnist_model.keras
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DrawingCanvas.css  DrawingCanvas.jsx
